[package]
name = "conductor_rust"
version = "0.1.0-alpha.0"
edition = "2021"
description = "A library for building Conductor workers with Rust"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
cargo-llvm-cov = "0.6.10"
mockito = "1.4.0"
